<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.proyectofinal.Lista_Clientes">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TableLayout
                    android:id="@+id/tblClientes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero" />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nit" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telefono" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/correo" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/direccion" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ciudad" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
