<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.proyectofinal.Ingreso">

    <HorizontalScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingreso"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtRma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/RMA"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/button6"
                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="buscar"
                        android:text="@string/buscar" />
                </LinearLayout>

                <EditText
                    android:id="@+id/txtCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cliente"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textWebEmailAddress" />

                <EditText
                    android:id="@+id/txtEquipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/equipo"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/modelo"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtSerie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/serie"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtFecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/btnFecha"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fecha" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="guardar"
                        android:text="@string/registrar" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="borrar"
                        android:text="@string/limpiar" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="modificar"
                        android:text="@string/editar" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="eliminar"
                        android:text="@string/eliminar" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>
